--- a/app/src/main/res/layout/add_event_layout.xml
+++ b/app/src/main/res/layout/add_event_layout.xml
@@ -19,7 +19,7 @@
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
         <EditText android:id="@+id/time_zone_add_event" android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
-        <TextView android:text="Описание" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+        <TextView android:text="@string/description" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
         <EditText android:id="@+id/description_add_event" android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
         <Button android:id="@+id/add_event_but" android:text="@string/add_event" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
