--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -1,9 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-<CalendarView android:id="@+id/calendar_view" android:layout_width="match_parent" android:layout_height="wrap_content">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 android:orientation="vertical"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent">
+    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
+                                                android:layout_height="wrap_content">
 
-</CalendarView>
-</LinearLayout>
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
+
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:id="@+id/note_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+    >
+
+            <CalendarView
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:id="@+id/calendarView"
+                    />
+
+            <ListView android:layout_width="match_parent"
+
+                      android:layout_height="202dp"
+                      android:id="@+id/day_events"
+                                                    android:layout_below="@id/calendarView"
+            ></ListView>
+        <android.support.design.widget.FloatingActionButton
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:id="@+id/add_event_button"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_add_black_24dp"
+        />
+    </RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
