--- a/app/src/main/res/menu/calendar_menu.xml
+++ b/app/src/main/res/menu/calendar_menu.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
 
     <item
-        android:id="@+id/add_event_menu_item"
-        android:title="@string/add_event"/>
-
-    <item
+            app:showAsAction="always"
             android:id="@+id/show_all_events"
         android:title="Все события"/>
 </menu>
