--- a/app/src/main/res/layout/del_or_up_activity.xml
+++ b/app/src/main/res/layout/del_or_up_activity.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:padding="@dimen/standart_padding">
         <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -43,6 +44,15 @@
             <EditText android:id="@+id/description_update_event"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"/>
+            <TextView
+                    android:text="Периодичность"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            <Spinner    android:id="@+id/rrule_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
             <TextView
                       android:text="Начало события"
                       android:layout_width="match_parent"
@@ -71,6 +81,7 @@
                     android:id="@+id/time_end"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
+
 
         </LinearLayout>
 
